# demo

./: .gitignore  CMakeLists.txt  README.md  build.sh  rebuild.sh  run.sh
demo/: CMakeLists.txt  demo.cpp  demo.dec.h  demo.h  window.cpp  window.h
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
